# ddd-rust-ex

./: .gitignore  Cargo.toml  README.md  prompt.txt
client/: Cargo.toml  README.md  build.sh  example  example.c
client/src/: lib.rs
client/tests/: client_test.rs
common/: Cargo.toml
common/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/api/: error.rs  message.rs  mod.rs  server.rs
server/src/api/message_handlers/: allocate_handler.rs  async_allocate_handler.rs  async_release_handler.rs  exit_handler.rs  heartbeat_handler.rs  mod.rs  query_handler.rs  release_handler.rs
server/src/api/middlewares/: logger.rs  mod.rs
server/src/app/: config.rs  error.rs  mod.rs  resource_app.rs  session_app.rs
server/src/domain/: error.rs  mod.rs  resource_pool.rs  user_sessions.rs
server/src/infra/: error.rs  mod.rs  resource_clib.rs  resource_mock.rs  resource_provider.rs
server/tests/: server_test.rs
