[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
name = "client"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.27"
tungstenite = "0.27"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3"
tracing = "0.1.41"


