[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
name = "client"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
common = { path = "../common" }
server = { path = "../server" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.27"
tungstenite = "0.27"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3"
axum = "0.8.4"
uuid = { version = "1.6.2", features = ["v4"] }
tracing = {version = "0.1.41", features = ["async-await"]}
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "chrono"]}



